[project]
name = "dtcone"
version = "0.1.0"
description = "Building..."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.1.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "pandas>=3.0.0",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.0",
    "sqlalchemy>=2.0.46",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "jupyter-contrib-nbextensions>=0.7.0",
    "jupyterlab-git>=0.51.4",
    "notebook<7",
    "pgcli>=4.4.0",
]
